--- a/StudyDictionary/SimpleVocab-Info.plist
+++ b/StudyDictionary/SimpleVocab-Info.plist
@@ -8,8 +8,23 @@
 	<string>Vocab Lists</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleIcons</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array>
+				<string>Icon-80</string>
+				<string>Icon-58</string>
+				<string>Icon-29</string>
+				<string>Icon-120</string>
+				<string>Icon-114</string>
+				<string>Icon-57</string>
+			</array>
+		</dict>
+	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>weinertworks.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.weinertworks.simplevocab</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
